--- a/paper/1_Initial/_extensions/wjschne/apaquarto/apa.css
+++ b/paper/1_Initial/_extensions/wjschne/apaquarto/apa.css
@@ -1,7 +1,9 @@
 body {line-height: 2em; font-size: 12pt}
 
 p {text-indent: 0.5in; margin: 0; line-height: 2em}
-
+div.Author p {
+  text-indent: 0;
+}
 .FigureTitle {font-weight: bold; margin: 5pt 0; font-size: 12pt; color: black;}
 .FigureTitle p {text-indent: 0; text-align: left;}
 .FigureNote p {text-indent: 0; margin: 0; padding: 0}
@@ -12,7 +14,7 @@ p {text-indent: 0.5in; margin: 0; line-height: 2em}
 h1, h2, h3, h4, h5 {border: none; margin: 0; padding: 0;line-height: 2; text-indent: 0 }
 
 h1 {text-align: center;}
-h3 {text-indent: 0.5in; font-style: italic}
+h3 {font-style: italic}
 
 h4, h5 {
 text-indent: 0.5in;
@@ -80,3 +82,5 @@ blockquote p:nth-child(1) {text-indent: 0}
 }
 
 .tabwid {padding: 0}
+
+.AbstractFirstParagraph p {text-indent: 0}
